got rid of the word Sample everywhere except the datastore

--- a/.slack/apps.json
+++ b/.slack/apps.json
@@ -1,1 +1,11 @@
-{}
+{
+  "apps": {
+    "T05JLT71YDT": {
+      "app_id": "A05LAGVAZ7S",
+      "IsDev": false,
+      "team_domain": "nkudos",
+      "team_id": "T05JLT71YDT"
+    }
+  },
+  "default": "nkudos"
+}
